[gd_scene load_steps=6 format=3 uid="uid://dxugj3gfp37y5"]

[ext_resource type="Script" path="res://scripts/inventory/wind_god_leafs.gd" id="1_7jmno"]
[ext_resource type="Texture2D" uid="uid://b4kti6qtg43ir" path="res://sprites/items/item_spawnables/leaf.png" id="2_5k3aq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_no1b1"]
size = Vector2(6, 6)

[sub_resource type="Animation" id="Animation_nbrf8"]
resource_name = "rotate"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("main_body/main_body_2/main_body_3/Leaf:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dy4oh"]
_data = {
"rotate": SubResource("Animation_nbrf8")
}

[node name="wind_god_leafs" type="Node2D"]
texture_filter = 1
script = ExtResource("1_7jmno")

[node name="main_body" type="Node2D" parent="."]

[node name="main_body_2" type="Node2D" parent="main_body"]

[node name="main_body_3" type="Node2D" parent="main_body/main_body_2"]

[node name="Area2D" type="Area2D" parent="main_body/main_body_2/main_body_3"]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="main_body/main_body_2/main_body_3/Area2D"]
shape = SubResource("RectangleShape2D_no1b1")

[node name="Leaf" type="Sprite2D" parent="main_body/main_body_2/main_body_3"]
texture = ExtResource("2_5k3aq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dy4oh")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true
autostart = true

[connection signal="body_entered" from="main_body/main_body_2/main_body_3/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
